# SBSS_Public

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt  install_node_packages.cmake
src/app/SBSS/: CMakeLists.txt  Makefile  cleScene.cpp  cleScene.h  config.cpp  config.h  fences.cpp  fences.h  flaptoolsdlg.cpp  flaptoolsdlg.h  hooks.cpp  hooks.h  incision.cpp  localFlapsViewer.cpp  localFlapsViewer.h  main.cpp  surgicalActions.cpp  surgicalActions.h  sutures.cpp  sutures.h
src/app/SBSS_MPI_Accelerator/: CMakeLists.txt  CORE_ENGINE_ACCELERATOR.cpp  CORE_ENGINE_ACCELERATOR.h  main.cpp
src/app/electron-SBSS/: cleTest.js  client.html  main.js  package.json  sbss-director.js  sbss-history.js  sbss-server.js  sbss-service.js  sbss-simulation.js  surface_object.js  ws_test.js
src/app/node-SBSS/: cleScene.js
src/app/opengl_3d/: CMakeLists.txt  SConscript
src/lib/: CMakeLists.txt
src/lib/Archive/: ARCHIVE.cpp  ARCHIVE.h  CMakeLists.txt  Makefile
src/lib/Archive/compat/: basename.cpp  dirname.cpp  strlcpy.cpp  strmode.cpp
src/lib/Archive/libtar/: extract.cpp
src/lib/CG_Optimized_Kernels/: CMakeLists.txt  Makefile  SConscript
src/lib/CG_Optimized_Kernels/Convergence_Norm/: Convergence_Norm_Helper.cpp  Convergence_Norm_Helper.h
src/lib/CG_Optimized_Kernels/Dot_Product/: Dot_Product_Helper.cpp  Dot_Product_Helper.h  test  test.cpp
src/lib/CG_Optimized_Kernels/Kernel_Base/: Kernel_Base_Helper.h  Kernel_Base_Reducer_Helper.h  Kernel_Mesh_Base_Helper.h  Kernel_Mesh_Base_Reducer_Helper.h  Kernel_OpenMP_Base_Helper.h  Kernel_OpenMP_Base_Reducer_Helper.h  Kernel_Serial_Base_Helper.h  Kernel_Serial_Base_Reducer_Helper.h
src/lib/CG_Optimized_Kernels/Project/: Project_Helper.cpp  Project_Helper.h
src/lib/CG_Optimized_Kernels/Vector_Add/: Vector_Add_Helper.cpp  Vector_Add_Helper.h
src/lib/CG_Optimized_Kernels/Vector_Element_Times/: Vector_Element_Times_Helper.h
src/lib/CG_Optimized_Kernels/Vector_SAXPY_A/: Vector_SAXPY_A_Helper.cpp  Vector_SAXPY_A_Helper.h
src/lib/CG_Optimized_Kernels/Vector_SAXPY_AB/: Vector_SAXPY_AB_Helper.cpp  (+1 more)
src/lib/Common/: ALIGNED_ARRAY.h  CMakeLists.txt  GENERIC_CELL.h  KEYFRAMED_PARAMETER_ANIMATION.cpp  KEYFRAMED_PARAMETER_ANIMATION.h  Makefile  PARAMETER_ANIMATION.h  POWER.h  STENCIL.h  Write_Output.cpp  Write_Output.h
src/lib/Cutter/: ARRAYS_ND.h  CutRegionGenerator_nocona  CutRegionGenerator_nocona_debug  DUMMY_REGION_GENERATOR.cpp  DUMMY_REGION_GENERATOR.h  EMBEDDED_VOXELIZED_OBJECT.h  Makefile  OVERRIDES.h  REGION_GENERATOR.cpp  REGION_GENERATOR.h  SConscript  VOXELIZED_REGION_GENERATOR.cpp  VOXELIZED_REGION_GENERATOR.h  Write_Output_3D.cpp  main.cpp
src/lib/EngineBackend/: BIPHASIC.h  CG_POLICY.h  CG_SYSTEM.h  CG_SYSTEM_HYBRID_NONLINEAR_ELASTICITY.cpp  CG_SYSTEM_NONLINEAR_ELASTICITY.cpp  CG_VECTOR.h  CG_VECTOR_HYBRID_NONLINEAR_ELASTICITY.cpp  CG_VECTOR_NONLINEAR_ELASTICITY.cpp  CMakeLists.txt  COROTATED.h  ELASTIC_SOLVER.cpp  ELASTIC_SOLVER.h  HELPERS.h  HYBRID_NONLINEAR_ELASTICITY.cpp  HYBRID_NONLINEAR_ELASTICITY.h  HYBRID_NONLINEAR_ELASTICITY_2D.cpp  HYBRID_NONLINEAR_ELASTICITY_3D.cpp  HYBRID_NONLINEAR_ELASTICITY_MUSCLES_AND_CONSTRAINTS.cpp  HYBRID_NONLINEAR_ELASTICITY_NO_SKINNING.cpp  LOGGING_ELASTICITY.cpp  LOGGING_ELASTICITY.h  MATERIAL_MODEL.h  MOONEY_RIVLIN.h  MOONEY_RIVLIN_MATERIAL.h  NEOHOOKEAN.h  NONLINEAR_ELASTICITY.cpp  NONLINEAR_ELASTICITY.h  NONLINEAR_ELASTICITY_2D.cpp  NONLINEAR_ELASTICITY_3D.cpp  OVERRIDES.h  ROTATED_STRESS_DERIVATIVE.h  SKINNING_NONLINEAR_ELASTICITY.cpp  SKINNING_NONLINEAR_ELASTICITY.h  SKINNING_NONLINEAR_ELASTICITY_2D.cpp  SKINNING_NONLINEAR_ELASTICITY_3D.cpp  SKINNING_NONLINEAR_ELASTICITY_CONSTRAINTS.cpp  SKINNING_NONLINEAR_ELASTICITY_MUSCLES.cpp  SOLVER.h  SPECIALIZED_KERNELS.cpp  SPECIALIZED_KERNELS.h  (+5 more)
src/lib/EngineFrontend/: ANALYTIC_COLLISION.cpp  ANALYTIC_COLLISION.h  CLElib.cpp  CLElib.h  CLElib_Dual_Point_Constraints.cpp  CLElib_Single_Point_Constraints.cpp  CMakeLists.txt  COLLISION_INTERFACE.h  ELASTIC_LATTICE_DEFORMER.cpp  ELASTIC_LATTICE_DEFORMER.h  EMBEDDING_TOOLS.cpp  EMBEDDING_TOOLS.h  Makefile  OPENVDB_LEVELSET_COLLISION.h  OPENVDB_LEVELSET_COLLISION_2D.cpp  OPENVDB_LEVELSET_COLLISION_3D.cpp  PHYSBAM_LEVELSET_COLLISION.cpp  PHYSBAM_LEVELSET_COLLISION.h  PHYSBAM_RIGID_BODY_LEVELSET_COLLISION.cpp  PHYSBAM_RIGID_BODY_LEVELSET_COLLISION.h  Write_Output.cpp  Write_Output.h
src/lib/EngineInterface/: CELL_TYPE.h  CMakeLists.txt  CONSTRAINTS.h  ENGINE_INTERFACE.cpp  ENGINE_INTERFACE.h  Makefile
src/lib/EngineInterfaceLocal/: CMakeLists.txt  ENGINE_INTERFACE_LOCAL.cpp  ENGINE_INTERFACE_LOCAL.h  Makefile
src/lib/EngineInterfaceMPI/: CMakeLists.txt  COMMAND_ID.h  ENGINE_INTERFACE_MPI.cpp  ENGINE_INTERFACE_MPI.h
src/lib/GraphicsUtils/: Bitmap.cpp  Bitmap.h  CMakeLists.txt  GLmatrices.cpp  GLmatrices.h  Makefile  Makefile.bmesh  Vec3f.h  bmesh.cpp  bmesh.h  boundingBox.h  disk_cycle.cpp  element_cycle.cpp  elements.cpp  glslTriangle.cpp  glslTriangle.h  lightsShaders.cpp  lightsShaders.h  lines.cpp  lines.h  loop_cycle.cpp  math3d.h  radial_cycle.cpp  sceneNode.h  shapes.cpp  shapes.h  skinGraphics.cpp  skinGraphics.h  staticTriangle.cpp  staticTriangle.h  textures.cpp  textures.h  trackball.cpp  trackball.h  trianglesUVW.cpp  trianglesUVW.h  wxGraphics.cpp  wxGraphics.h
src/lib/HTTPViewer/: CMakeLists.txt  DATA.cpp  DATA.h  Makefile  SERVER.cpp  SERVER.h
src/lib/PhysBAMLegacy/: CMakeLists.txt  SConscript
src/lib/SIMD_Optimized_Kernels/: CMakeLists.txt  GenerateSIMDTest.py  GenerateStreamTest.py  GenerateThreadTest.py  GenerateUnitTest.py
src/lib/Thread_Queueing/: CMakeLists.txt  Makefile  PTHREAD_QUEUE.h
src/node-lib/: CMakeLists.txt
src/node-lib/CLEjs/: CLEjs.cpp  CLEjs.h  CLEjs_test.js  CMakeLists.txt  package.json
src/node-lib/legacy-cutter/: CMakeLists.txt  legacy-cutter.cpp  legacy-cutter.h  package.json
src/node-native-modules/: CMakeLists.txt
src/node-native-modules/CLEjs/: CLEjs.cpp  CLEjs.h  CMakeLists.txt
src/node-native-modules/legacy-cutter/: CMakeLists.txt  Mat3x3f.h  incision.h  legacy-cutter.cpp  legacy-cutter.h
(+420 files in other folders)
