add_subdirectory( EngineBackend )
add_subdirectory( EngineFrontend )
add_subdirectory( Archive )
add_subdirectory( CG_Optimized_Kernels )
add_subdirectory( Common )
add_subdirectory( EngineInterface )
add_subdirectory( SIMD_Optimized_Kernels )
add_subdirectory( Thread_Queueing )
add_subdirectory( GraphicsUtils )
#add_subdirectory( HTTPViewer )
add_subdirectory( PhysBAMLegacy )
add_subdirectory( EngineInterfaceLocal )
add_subdirectory( EngineInterfaceMPI )
