add_library( EngineBackend
  CG_SYSTEM_HYBRID_NONLINEAR_ELASTICITY.cpp
  CG_SYSTEM_NONLINEAR_ELASTICITY.cpp
  CG_VECTOR_HYBRID_NONLINEAR_ELASTICITY.cpp
  CG_VECTOR_NONLINEAR_ELASTICITY.cpp
  ELASTIC_SOLVER.cpp
  HYBRID_NONLINEAR_ELASTICITY_2D.cpp
  HYBRID_NONLINEAR_ELASTICITY_3D.cpp
  HYBRID_NONLINEAR_ELASTICITY.cpp
  HYBRID_NONLINEAR_ELASTICITY_MUSCLES_AND_CONSTRAINTS.cpp
  HYBRID_NONLINEAR_ELASTICITY_NO_SKINNING.cpp
  LOGGING_ELASTICITY.cpp
  NONLINEAR_ELASTICITY_2D.cpp
  NONLINEAR_ELASTICITY_3D.cpp
  NONLINEAR_ELASTICITY.cpp
  PTHREAD_QUEUE.cpp
  SKINNING_NONLINEAR_ELASTICITY_2D.cpp
  SKINNING_NONLINEAR_ELASTICITY_3D.cpp
  SKINNING_NONLINEAR_ELASTICITY_CONSTRAINTS.cpp
  SKINNING_NONLINEAR_ELASTICITY.cpp
  SKINNING_NONLINEAR_ELASTICITY_MUSCLES.cpp
  SPECIALIZED_KERNELS.cpp
  Write_Output_3D.cpp
  Write_Output_Minimal_3D.cpp)

target_include_directories (EngineBackend PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../PhysBAMLegacy/)
target_include_directories (EngineBackend PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../ )
