#
#   PHYSBAM_Tools
#

add_library( PhysBAM_Tools
PhysBAM_Tools/Adaptive_Arithmetic/EXACT_FLOAT.cpp
PhysBAM_Tools/Adaptive_Arithmetic/EXACT_RATIONAL.cpp
PhysBAM_Tools/Adaptive_Arithmetic/EXPANSION_ARITHMETIC.cpp
PhysBAM_Tools/Arrays/ARRAY_COLLECTION.cpp
PhysBAM_Tools/Arrays/ARRAY_COLLECTION_ELEMENT_BASE.cpp
PhysBAM_Tools/Arrays/EXTERNAL_ARRAY_COLLECTION.cpp
PhysBAM_Tools/Clone/CLONE_ARRAY.cpp
PhysBAM_Tools/Data_Structures/DIRECTED_GRAPH.cpp
PhysBAM_Tools/Data_Structures/DYNAMIC_LIST.cpp
PhysBAM_Tools/Data_Structures/FLOOD_FILL_GRAPH.cpp
PhysBAM_Tools/Data_Structures/FORCE_ELEMENTS.cpp
PhysBAM_Tools/Data_Structures/KD_TREE.cpp
PhysBAM_Tools/Data_Structures/UNDIRECTED_GRAPH.cpp
PhysBAM_Tools/Fourier_Transforms/FFT.cpp
PhysBAM_Tools/Fourier_Transforms/FFT_1D.cpp
PhysBAM_Tools/Fourier_Transforms/FFT_2D.cpp
PhysBAM_Tools/Fourier_Transforms/FFT_3D.cpp
PhysBAM_Tools/Fourier_Transforms_Calculations/DEEP_WATER_EVOLUTION.cpp
PhysBAM_Tools/Fourier_Transforms_Calculations/PHILLIPS_SPECTRUM.cpp
PhysBAM_Tools/Fourier_Transforms_Calculations/TURBULENCE.cpp
PhysBAM_Tools/Grids_Dyadic/BINTREE_CELL.cpp
PhysBAM_Tools/Grids_Dyadic/BINTREE_CHILDREN.cpp
PhysBAM_Tools/Grids_Dyadic/BINTREE_GRID.cpp
PhysBAM_Tools/Grids_Dyadic/MAP_BINTREE_MESH.cpp
PhysBAM_Tools/Grids_Dyadic/MAP_OCTREE_MESH.cpp
PhysBAM_Tools/Grids_Dyadic/MAP_QUADTREE_MESH.cpp
PhysBAM_Tools/Grids_Dyadic/OCTREE_CELL.cpp
PhysBAM_Tools/Grids_Dyadic/OCTREE_CHILDREN.cpp
PhysBAM_Tools/Grids_Dyadic/OCTREE_GRID.cpp
PhysBAM_Tools/Grids_Dyadic/QUADTREE_CELL.cpp
PhysBAM_Tools/Grids_Dyadic/QUADTREE_CHILDREN.cpp
PhysBAM_Tools/Grids_Dyadic/QUADTREE_GRID.cpp
PhysBAM_Tools/Grids_Dyadic_Arrays/FLOOD_FILL_BINTREE.cpp
PhysBAM_Tools/Grids_Dyadic_Arrays/FLOOD_FILL_OCTREE.cpp
PhysBAM_Tools/Grids_Dyadic_Arrays/FLOOD_FILL_QUADTREE.cpp
PhysBAM_Tools/Grids_Dyadic_Boundaries/BOUNDARY_DYADIC.cpp
PhysBAM_Tools/Grids_Dyadic_Computations/VORTICITY_DYADIC.cpp
PhysBAM_Tools/Grids_Dyadic_Interpolation/LINEAR_INTERPOLATION_DYADIC_HELPER.cpp
PhysBAM_Tools/Grids_Dyadic_PDE_Linear/LAPLACE_DYADIC.cpp
PhysBAM_Tools/Grids_Dyadic_PDE_Linear/POISSON_DYADIC.cpp
PhysBAM_Tools/Grids_RLE/RLE_GRID.cpp
PhysBAM_Tools/Grids_RLE/RLE_GRID_2D.cpp
PhysBAM_Tools/Grids_RLE/RLE_GRID_3D.cpp
PhysBAM_Tools/Grids_RLE/RLE_RUN.cpp
PhysBAM_Tools/Grids_RLE_Advection/ADVECTION_FACE_VELOCITY_DONOR_CELL_RLE.cpp
PhysBAM_Tools/Grids_RLE_Boundaries/BOUNDARY_RLE.cpp
PhysBAM_Tools/Grids_RLE_Computations/VORTICITY_RLE.cpp
PhysBAM_Tools/Grids_RLE_PDE_Linear/LAPLACE_RLE.cpp
PhysBAM_Tools/Grids_Uniform/GRID.cpp
PhysBAM_Tools/Grids_Uniform/UNIFORM_GRID_ITERATOR.cpp
PhysBAM_Tools/Grids_Uniform/UNIFORM_GRID_ITERATOR_CELL.cpp
PhysBAM_Tools/Grids_Uniform/UNIFORM_GRID_ITERATOR_EDGE.cpp
PhysBAM_Tools/Grids_Uniform/UNIFORM_GRID_ITERATOR_FACE.cpp
PhysBAM_Tools/Grids_Uniform/UNIFORM_GRID_ITERATOR_NODE.cpp
PhysBAM_Tools/Grids_Uniform_Advection/ADVECTION_CONSERVATIVE_ENO.cpp
PhysBAM_Tools/Grids_Uniform_Advection/ADVECTION_HAMILTON_JACOBI_ENO.cpp
PhysBAM_Tools/Grids_Uniform_Advection/ADVECTION_HAMILTON_JACOBI_WENO.cpp
PhysBAM_Tools/Grids_Uniform_Advection/ADVECTION_MACCORMACK_UNIFORM.cpp
PhysBAM_Tools/Grids_Uniform_Advection/ADVECTION_SEMI_LAGRANGIAN_UNIFORM.cpp
PhysBAM_Tools/Grids_Uniform_Advection/ADVECTION_SEMI_LAGRANGIAN_UNIFORM_BETA.cpp
PhysBAM_Tools/Grids_Uniform_Advection/ADVECTION_SEPARABLE_UNIFORM.cpp
PhysBAM_Tools/Grids_Uniform_Arrays/ARRAYS_UTILITIES.cpp
PhysBAM_Tools/Grids_Uniform_Arrays/FLOOD_FILL_2D.cpp
PhysBAM_Tools/Grids_Uniform_Arrays/FLOOD_FILL_3D.cpp
PhysBAM_Tools/Grids_Uniform_Arrays/UNIFORM_ARRAY_ITERATOR.cpp
PhysBAM_Tools/Grids_Uniform_Boundaries/BOUNDARY_MAC_GRID_PERIODIC.cpp
PhysBAM_Tools/Grids_Uniform_Boundaries/BOUNDARY_REFLECTION_ATTENUATION.cpp
PhysBAM_Tools/Grids_Uniform_Boundaries/BOUNDARY_REFLECTION_UNIFORM.cpp
PhysBAM_Tools/Grids_Uniform_Boundaries/BOUNDARY_UNIFORM.cpp
PhysBAM_Tools/Grids_Uniform_Boundaries/BOUNDARY_UNIFORM_PERIODIC.cpp
PhysBAM_Tools/Grids_Uniform_Interpolation/CUBIC_MN_INTERPOLATION_UNIFORM.cpp
PhysBAM_Tools/Grids_Uniform_Interpolation/LINEAR_INTERPOLATION_MAC_2D_HELPER.cpp
PhysBAM_Tools/Grids_Uniform_Interpolation/LINEAR_INTERPOLATION_MAC_3D_HELPER.cpp
PhysBAM_Tools/Grids_Uniform_Interpolation/LINEAR_INTERPOLATION_UNIFORM.cpp
PhysBAM_Tools/Grids_Uniform_Interpolation/QUADRATIC_INTERPOLATION_UNIFORM.cpp
PhysBAM_Tools/Grids_Uniform_PDE_Linear/LAPLACE_UNIFORM.cpp
PhysBAM_Tools/Grids_Uniform_PDE_Linear/POISSON_UNIFORM.cpp
PhysBAM_Tools/Grids_Uniform_PDE_Linear/PROJECTION_UNIFORM.cpp
PhysBAM_Tools/Images/BMP_FILE.cpp
PhysBAM_Tools/Images/EPS_FILE.cpp
PhysBAM_Tools/Images/EXR_FILE.cpp
PhysBAM_Tools/Images/IMAGE.cpp
PhysBAM_Tools/Images/JPG_FILE.cpp
PhysBAM_Tools/Images/MOV_FILE.cpp
PhysBAM_Tools/Images/PNG_FILE.cpp
PhysBAM_Tools/Images/PPM_FILE.cpp
PhysBAM_Tools/Images/RGB_FILE.cpp
PhysBAM_Tools/Interpolation/BSPLINE.cpp
PhysBAM_Tools/Interpolation/BSPLINE_QUATERNION.cpp
PhysBAM_Tools/Interpolation/CUBIC_MN_INTERPOLATION.cpp
PhysBAM_Tools/Interpolation/INTERPOLATED_COLOR_MAP.cpp
PhysBAM_Tools/Interpolation/LINEAR_INTERPOLATION.cpp
PhysBAM_Tools/Krylov_Solvers/CONJUGATE_GRADIENT.cpp
PhysBAM_Tools/Krylov_Solvers/CONJUGATE_RESIDUAL.cpp
PhysBAM_Tools/Krylov_Solvers/IMPLICIT_SOLVE_PARAMETERS.cpp
PhysBAM_Tools/Krylov_Solvers/KRYLOV_SOLVER.cpp
PhysBAM_Tools/Krylov_Solvers/KRYLOV_SYSTEM_BASE.cpp
PhysBAM_Tools/Krylov_Solvers/KRYLOV_VECTOR_BASE.cpp
PhysBAM_Tools/Krylov_Solvers/KRYLOV_VECTOR_WRAPPER.cpp
PhysBAM_Tools/Krylov_Solvers/LANCZOS_ITERATION.cpp
PhysBAM_Tools/Krylov_Solvers/MATRIX_SYSTEM.cpp
PhysBAM_Tools/Krylov_Solvers/PCG_SPARSE.cpp
PhysBAM_Tools/Krylov_Solvers/SYMMCGNE.cpp
PhysBAM_Tools/Krylov_Solvers/SYMMQMR.cpp
PhysBAM_Tools/Krylov_Solvers/SYMMQMR.cpp.orig
PhysBAM_Tools/Log/DEBUG_PRINT.cpp
PhysBAM_Tools/Log/DEBUG_SUBSTEPS.cpp
PhysBAM_Tools/Log/DEBUG_UTILITIES.cpp
PhysBAM_Tools/Log/LOG.cpp
PhysBAM_Tools/Log/LOG_ENTRY.cpp
PhysBAM_Tools/Matrices/BANDED_SYMMETRIC_MATRIX.cpp
PhysBAM_Tools/Matrices/MATRIX_3X2.cpp
PhysBAM_Tools/Matrices/MATRIX_3X3.cpp
PhysBAM_Tools/Matrices/MATRIX_4X4.cpp
PhysBAM_Tools/Matrices/MATRIX_BASE.cpp
PhysBAM_Tools/Matrices/MATRIX_MXN.cpp
PhysBAM_Tools/Matrices/ROTATION.cpp
PhysBAM_Tools/Matrices/SPARSE_MATRIX_FLAT_MXN.cpp
PhysBAM_Tools/Matrices/SPARSE_MATRIX_FLAT_NXN.cpp
PhysBAM_Tools/Matrices/SYMMETRIC_MATRIX_3X3.cpp
PhysBAM_Tools/Matrices/SYMMETRIC_MATRIX_NXN.cpp
PhysBAM_Tools/Nonlinear_Equations/ITERATIVE_SOLVER.cpp
PhysBAM_Tools/Nonlinear_Equations/LINE_SEARCH.cpp
PhysBAM_Tools/Optimization/LINEAR_PROGRAMMING.cpp
PhysBAM_Tools/Optimization/QUADRATIC_PROGRAMMING.cpp
#PhysBAM_Tools/Ordinary_Differential_Equations/COMBINED_COLLISIONS_NONLINEAR_FUNCTION.cpp
#PhysBAM_Tools/Ordinary_Differential_Equations/COMBINED_COLLISIONS_PARAMETER_SPACE.cpp
PhysBAM_Tools/Ordinary_Differential_Equations/DRIVER.cpp
PhysBAM_Tools/Ordinary_Differential_Equations/EULER_STEP_PARTICLES.cpp
PhysBAM_Tools/Ordinary_Differential_Equations/EXAMPLE.cpp
PhysBAM_Tools/Ordinary_Differential_Equations/RUNGEKUTTA.cpp
PhysBAM_Tools/Parallel_Computation/BOUNDARY_MPI.cpp
PhysBAM_Tools/Parallel_Computation/FLOOD_FILL_MPI.cpp
PhysBAM_Tools/Parallel_Computation/LAPLACE_MPI.cpp
PhysBAM_Tools/Parallel_Computation/LAPLACE_RLE_MPI.cpp
PhysBAM_Tools/Parallel_Computation/LAPLACE_UNIFORM_MPI.cpp
PhysBAM_Tools/Parallel_Computation/LOCAL_GRID.cpp
PhysBAM_Tools/Parallel_Computation/MPI_GRID.cpp
PhysBAM_Tools/Parallel_Computation/MPI_RLE_GRID.cpp
PhysBAM_Tools/Parallel_Computation/MPI_UNIFORM_GRID.cpp
PhysBAM_Tools/Parallel_Computation/MPI_UTILITIES.cpp
PhysBAM_Tools/Parallel_Computation/MPI_WORLD.cpp
PhysBAM_Tools/Parallel_Computation/PCG_SPARSE_MPI.cpp
PhysBAM_Tools/Parallel_Computation/PCG_SPARSE_MPI_THREADED.cpp
PhysBAM_Tools/Parallel_Computation/PCG_SPARSE_THREADED.cpp
PhysBAM_Tools/Parallel_Computation/THREADED_ADVECTION_SEMI_LAGRANGIAN_UNIFORM.cpp
PhysBAM_Tools/Parallel_Computation/THREADED_UNIFORM_GRID.cpp
PhysBAM_Tools/Parallel_Computation/THREAD_QUEUE.cpp
PhysBAM_Tools/Parsing/GENERIC_PARSER.cpp
PhysBAM_Tools/Parsing/PARAMETER_LIST.cpp
PhysBAM_Tools/Parsing/PARAMETER_LIST_CONTAINER.cpp
PhysBAM_Tools/Parsing/PARSE_ARGS.cpp
PhysBAM_Tools/Parsing/STRING_UTILITIES.cpp
PhysBAM_Tools/Particles_Interpolation/SCATTERED_INTERPOLATION.cpp
PhysBAM_Tools/Polynomials/CUBIC.cpp
PhysBAM_Tools/Polynomials/QUADRATIC.cpp
PhysBAM_Tools/Random_Numbers/MT19937.cpp
PhysBAM_Tools/Random_Numbers/NOISE.cpp
PhysBAM_Tools/Random_Numbers/RANDOM_NUMBERS.cpp
PhysBAM_Tools/Random_Numbers/SOBOL.cpp
PhysBAM_Tools/Read_Write/Arrays/READ_WRITE_ARRAY_COLLECTION.cpp
PhysBAM_Tools/Read_Write/Data_Structures/READ_WRITE_DYNAMIC_LIST.cpp
PhysBAM_Tools/Read_Write/Grids_Dyadic/READ_WRITE_BINTREE_CELL.cpp
PhysBAM_Tools/Read_Write/Grids_Dyadic/READ_WRITE_OCTREE_CELL.cpp
PhysBAM_Tools/Read_Write/Grids_Dyadic/READ_WRITE_QUADTREE_CELL.cpp
PhysBAM_Tools/Read_Write/Matlab/GNUPLOT_OUTPUT.cpp
PhysBAM_Tools/Read_Write/Matlab/MATLAB_OUTPUT.cpp
PhysBAM_Tools/Read_Write/Octave/OCTAVE_OUTPUT.cpp
PhysBAM_Tools/Read_Write/Utilities/FILE_UTILITIES.cpp
PhysBAM_Tools/Read_Write/Utilities/ZIP.cpp
PhysBAM_Tools/Utilities/EXCEPTIONS.cpp
PhysBAM_Tools/Utilities/INTERRUPTS.cpp
PhysBAM_Tools/Utilities/PROCESS_UTILITIES.cpp
PhysBAM_Tools/Utilities/SYMBOL.cpp
PhysBAM_Tools/Utilities/TEST_BASE.cpp
PhysBAM_Tools/Utilities/TIMER.cpp
PhysBAM_Tools/Vectors/VECTOR.cpp
  )

target_compile_definitions(PhysBAM_Tools PUBLIC "COMPILE_WITHOUT_RLE_SUPPORT=1")
target_compile_definitions(PhysBAM_Tools PUBLIC "COMPILE_WITHOUT_ZLIB_SUPPORT=1")
target_compile_definitions(PhysBAM_Tools PUBLIC "COMPILE_WITHOUT_DYADIC_SUPPORT=1")
#target_compile_definitions(PhysBAM_Tools PUBLIC "COMPILE_WITHOUT_DOUBLE_SUPPORT=1")
target_compile_options(PhysBAM_Tools PUBLIC "-fpermissive")
target_include_directories (PhysBAM_Tools PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/)

#
#   PHYSBAM_Geometry
#
add_library( PhysBAM_Geometry
PhysBAM_Geometry/Adaptive_Geometry/Intersects.cpp
PhysBAM_Geometry/Basic_Geometry/BOUNDED_HORIZONTAL_PLANE.cpp
PhysBAM_Geometry/Basic_Geometry/BOX.cpp
PhysBAM_Geometry/Basic_Geometry/CYLINDER.cpp
PhysBAM_Geometry/Basic_Geometry/ELLIPSOID.cpp
PhysBAM_Geometry/Basic_Geometry/HEXAHEDRON.cpp
PhysBAM_Geometry/Basic_Geometry/ORIENTED_BOX.cpp
PhysBAM_Geometry/Basic_Geometry/PLANE.cpp
PhysBAM_Geometry/Basic_Geometry/POLYGON.cpp
PhysBAM_Geometry/Basic_Geometry/RAY.cpp
PhysBAM_Geometry/Basic_Geometry/RING.cpp
PhysBAM_Geometry/Basic_Geometry/SEGMENT_2D.cpp
PhysBAM_Geometry/Basic_Geometry/SEGMENT_3D.cpp
PhysBAM_Geometry/Basic_Geometry/SPHERE.cpp
PhysBAM_Geometry/Basic_Geometry/TETRAHEDRON.cpp
PhysBAM_Geometry/Basic_Geometry/TRIANGLE_2D.cpp
PhysBAM_Geometry/Basic_Geometry/TRIANGLE_3D.cpp
PhysBAM_Geometry/Basic_Geometry_Computations/BOX_BOX_INTERSECTION_AREA.cpp
PhysBAM_Geometry/Basic_Geometry_Computations/BOX_POLYGON_INTERSECTION_AREA.cpp
PhysBAM_Geometry/Basic_Geometry_Intersections/BOX_LINE_2D_INTERSECTION.cpp
PhysBAM_Geometry/Basic_Geometry_Intersections/BOX_PLANE_INTERSECTION.cpp
PhysBAM_Geometry/Basic_Geometry_Intersections/BOX_POINT_SIMPLEX_1D_INTERSECTION.cpp
PhysBAM_Geometry/Basic_Geometry_Intersections/BOX_SEGMENT_2D_INTERSECTION.cpp
PhysBAM_Geometry/Basic_Geometry_Intersections/BOX_SPHERE_INTERSECTION.cpp
PhysBAM_Geometry/Basic_Geometry_Intersections/BOX_TRIANGLE_3D_INTERSECTION.cpp
PhysBAM_Geometry/Basic_Geometry_Intersections/RAY_BOX_INTERSECTION.cpp
PhysBAM_Geometry/Basic_Geometry_Intersections/RAY_CYLINDER_INTERSECTION.cpp
PhysBAM_Geometry/Basic_Geometry_Intersections/RAY_ELLIPSOID_INTERSECTION.cpp
PhysBAM_Geometry/Basic_Geometry_Intersections/RAY_ORIENTED_BOX_INTERSECTION.cpp
PhysBAM_Geometry/Basic_Geometry_Intersections/RAY_PLANE_INTERSECTION.cpp
PhysBAM_Geometry/Basic_Geometry_Intersections/RAY_POINT_SIMPLEX_1D_INTERSECTION.cpp
PhysBAM_Geometry/Basic_Geometry_Intersections/RAY_RING_INTERSECTION.cpp
PhysBAM_Geometry/Basic_Geometry_Intersections/RAY_SEGMENT_2D_INTERSECTION.cpp
PhysBAM_Geometry/Basic_Geometry_Intersections/RAY_SPHERE_INTERSECTION.cpp
PhysBAM_Geometry/Basic_Geometry_Intersections/RAY_TETRAHEDRON_INTERSECTION.cpp
PhysBAM_Geometry/Basic_Geometry_Intersections/RAY_TRIANGLE_3D_INTERSECTION.cpp
PhysBAM_Geometry/Basic_Geometry_Intersections/SEGMENT_2D_SEGMENT_2D_INTERSECTION.cpp
PhysBAM_Geometry/Basic_Geometry_Intersections/SEGMENT_3D_TRIANGLE_3D_INTERSECTION.cpp
PhysBAM_Geometry/Collision_Detection/COLLISION_GEOMETRY_SPATIAL_PARTITION.cpp
PhysBAM_Geometry/Collision_Detection_Computations/GET_POTENTIAL_COLLISIONS.cpp
PhysBAM_Geometry/Collisions/COLLISION_GEOMETRY.cpp
PhysBAM_Geometry/Collisions/COLLISION_GEOMETRY_COLLECTION.cpp
PhysBAM_Geometry/Collisions/POINT_REPULSION.cpp
PhysBAM_Geometry/Collisions/RIGID_COLLISION_GEOMETRY.cpp
PhysBAM_Geometry/Collisions/RIGID_COLLISION_GEOMETRY_1D.cpp
PhysBAM_Geometry/Collisions/RIGID_COLLISION_GEOMETRY_2D.cpp
PhysBAM_Geometry/Collisions/RIGID_COLLISION_GEOMETRY_3D.cpp
PhysBAM_Geometry/Collisions_And_Grids/GRID_BASED_COLLISION_GEOMETRY.cpp
PhysBAM_Geometry/Collisions_And_Grids/OBJECTS_IN_CELL.cpp
PhysBAM_Geometry/Constitutive_Models/STRAIN_MEASURE.cpp
PhysBAM_Geometry/Continuous_Collision_Detection/EDGE_EDGE_COLLISION.cpp
PhysBAM_Geometry/Continuous_Collision_Detection/POINT_FACE_COLLISION.cpp
PhysBAM_Geometry/Fourier_Transforms_Calculations/DEEP_WATER_EVOLUTION_HEIGHTS.cpp
PhysBAM_Geometry/Fracture/CUTTING_SIMPLEX.cpp
PhysBAM_Geometry/Geometry_Particles/GEOMETRY_PARTICLES.cpp
PhysBAM_Geometry/Geometry_Particles/REGISTER_GEOMETRY_READ_WRITE.cpp
PhysBAM_Geometry/Geometry_Particles/RIGID_GEOMETRY_PARTICLES.cpp
PhysBAM_Geometry/Grids_Dyadic_Collisions/GRID_BASED_COLLISION_GEOMETRY_DYADIC.cpp
PhysBAM_Geometry/Grids_Dyadic_Computations/DUALCONTOUR_OCTREE.cpp
PhysBAM_Geometry/Grids_Dyadic_Computations/LEVELSET_DYADIC_SIGNED_DISTANCE.cpp
PhysBAM_Geometry/Grids_Dyadic_Computations/LEVELSET_MAKER_DYADIC.cpp
PhysBAM_Geometry/Grids_Dyadic_Computations/RIGID_GEOMETRY_RASTERIZATION_DYADIC.cpp
PhysBAM_Geometry/Grids_Dyadic_Computations/TRIANGULATED_SURFACE_SIGNED_DISTANCE_DYADIC.cpp
PhysBAM_Geometry/Grids_Dyadic_Level_Sets/EXTRAPOLATION_DYADIC.cpp
PhysBAM_Geometry/Grids_Dyadic_Level_Sets/FAST_MARCHING_METHOD_DYADIC.cpp
PhysBAM_Geometry/Grids_Dyadic_Level_Sets/LEVELSET_DYADIC.cpp
PhysBAM_Geometry/Grids_Dyadic_Level_Sets/LEVELSET_OCTREE.cpp
PhysBAM_Geometry/Grids_Dyadic_Level_Sets/LEVELSET_QUADTREE.cpp
PhysBAM_Geometry/Grids_Dyadic_PDE_Linear/LAPLACE_COLLIDABLE_DYADIC.cpp
PhysBAM_Geometry/Grids_Dyadic_PDE_Linear/POISSON_COLLIDABLE_DYADIC.cpp
PhysBAM_Geometry/Grids_RLE_Collisions/GRID_BASED_COLLISION_GEOMETRY_RLE.cpp
PhysBAM_Geometry/Grids_RLE_Computations/DUALCONTOUR_RLE_3D.cpp
PhysBAM_Geometry/Grids_RLE_Computations/RIGID_GEOMETRY_RASTERIZATION_RLE.cpp
PhysBAM_Geometry/Grids_RLE_Level_Sets/EXTRAPOLATION_RLE.cpp
PhysBAM_Geometry/Grids_RLE_Level_Sets/FAST_MARCHING_METHOD_RLE.cpp
PhysBAM_Geometry/Grids_RLE_Level_Sets/LEVELSET_RLE.cpp
PhysBAM_Geometry/Grids_RLE_PDE_Linear/LAPLACE_COLLIDABLE_RLE.cpp
PhysBAM_Geometry/Grids_Uniform_Advection_Collidable/ADVECTION_SEMI_LAGRANGIAN_COLLIDABLE_CELL_UNIFORM.cpp
PhysBAM_Geometry/Grids_Uniform_Advection_Collidable/ADVECTION_SEMI_LAGRANGIAN_COLLIDABLE_FACE_BINARY_UNIFORM.cpp
PhysBAM_Geometry/Grids_Uniform_Advection_Collidable/ADVECTION_SEMI_LAGRANGIAN_COLLIDABLE_FACE_SLIP_UNIFORM.cpp
PhysBAM_Geometry/Grids_Uniform_Collisions/CUT_CELL_COMPUTATIONS.cpp
PhysBAM_Geometry/Grids_Uniform_Collisions/GRID_BASED_COLLISION_GEOMETRY_UNIFORM.cpp
PhysBAM_Geometry/Grids_Uniform_Computations/BOX_SIGNED_DISTANCE.cpp
PhysBAM_Geometry/Grids_Uniform_Computations/CYLINDER_SIGNED_DISTANCE.cpp
PhysBAM_Geometry/Grids_Uniform_Computations/DUALCONTOUR_2D.cpp
PhysBAM_Geometry/Grids_Uniform_Computations/DUALCONTOUR_3D.cpp
PhysBAM_Geometry/Grids_Uniform_Computations/ELLIPSOID_SIGNED_DISTANCE.cpp
PhysBAM_Geometry/Grids_Uniform_Computations/LEVELSET_MAKER_UNIFORM.cpp
PhysBAM_Geometry/Grids_Uniform_Computations/LEVELSET_MAKER_UNIFORM_2D.cpp
PhysBAM_Geometry/Grids_Uniform_Computations/RIGID_GEOMETRY_RASTERIZATION_UNIFORM.cpp
PhysBAM_Geometry/Grids_Uniform_Computations/SEGMENTED_CURVE_2D_SIGNED_DISTANCE.cpp
PhysBAM_Geometry/Grids_Uniform_Computations/SPHERE_SIGNED_DISTANCE.cpp
PhysBAM_Geometry/Grids_Uniform_Computations/TRIANGULATED_SURFACE_HEAVISIDE_UNIFORM.cpp
PhysBAM_Geometry/Grids_Uniform_Computations/TRIANGULATED_SURFACE_SIGNED_DISTANCE_UNIFORM.cpp
PhysBAM_Geometry/Grids_Uniform_Interpolation_Collidable/FACE_LOOKUP_COLLIDABLE_BINARY_UNIFORM.cpp
PhysBAM_Geometry/Grids_Uniform_Interpolation_Collidable/FACE_LOOKUP_COLLIDABLE_SLIP_UNIFORM.cpp
PhysBAM_Geometry/Grids_Uniform_Interpolation_Collidable/FACE_LOOKUP_COLLIDABLE_UNIFORM.cpp
PhysBAM_Geometry/Grids_Uniform_Interpolation_Collidable/LINEAR_INTERPOLATION_COLLIDABLE_CELL_UNIFORM.cpp
PhysBAM_Geometry/Grids_Uniform_Level_Sets/EXTRAPOLATION_UNIFORM.cpp
PhysBAM_Geometry/Grids_Uniform_Level_Sets/FAST_LEVELSET.cpp
PhysBAM_Geometry/Grids_Uniform_Level_Sets/FAST_MARCHING_METHOD_UNIFORM.cpp
PhysBAM_Geometry/Grids_Uniform_Level_Sets/LEVELSET_1D.cpp
PhysBAM_Geometry/Grids_Uniform_Level_Sets/LEVELSET_2D.cpp
PhysBAM_Geometry/Grids_Uniform_Level_Sets/LEVELSET_3D.cpp
PhysBAM_Geometry/Grids_Uniform_Level_Sets/LEVELSET_MULTIPLE.cpp
PhysBAM_Geometry/Grids_Uniform_Level_Sets/LEVELSET_MULTIPLE_UNIFORM.cpp
PhysBAM_Geometry/Grids_Uniform_Level_Sets/LEVELSET_UNIFORM.cpp
PhysBAM_Geometry/Grids_Uniform_PDE_Linear/LAPLACE_COLLIDABLE_UNIFORM.cpp
PhysBAM_Geometry/Grids_Uniform_PDE_Linear/POISSON_COLLIDABLE_UNIFORM.cpp
PhysBAM_Geometry/Grids_Uniform_PDE_Linear/PROJECTION_COLLIDABLE_UNIFORM.cpp
PhysBAM_Geometry/Implicit_Objects/ANALYTIC_IMPLICIT_OBJECT.cpp
PhysBAM_Geometry/Implicit_Objects/IMPLICIT_OBJECT.cpp
PhysBAM_Geometry/Implicit_Objects/IMPLICIT_OBJECT_TRANSFORMED.cpp
PhysBAM_Geometry/Implicit_Objects_Dyadic/DYADIC_IMPLICIT_OBJECT.cpp
PhysBAM_Geometry/Implicit_Objects_RLE/RLE_IMPLICIT_OBJECT.cpp
PhysBAM_Geometry/Implicit_Objects_Uniform/IMPLICIT_OBJECT_INTERSECTOR.cpp
PhysBAM_Geometry/Implicit_Objects_Uniform/LEVELSET_IMPLICIT_OBJECT.cpp
PhysBAM_Geometry/Implicit_Objects_Uniform/MULTIBODY_LEVELSET_IMPLICIT_OBJECT.cpp
PhysBAM_Geometry/Interpolation_Collidable/LINEAR_INTERPOLATION_UNIFORM_GEOMETRY.cpp
PhysBAM_Geometry/Level_Sets/EXTRAPOLATION_HIGHER_ORDER.cpp
PhysBAM_Geometry/Level_Sets/LEVELSET_UTILITIES.cpp
PhysBAM_Geometry/Parallel_Computation/LAPLACE_COLLIDABLE_MPI.cpp
PhysBAM_Geometry/Parallel_Computation/LAPLACE_COLLIDABLE_RLE_MPI.cpp
PhysBAM_Geometry/Read_Write/Geometry/READ_WRITE_EMBEDDED_OBJECT.cpp
PhysBAM_Geometry/Read_Write/Geometry/READ_WRITE_EMBEDDED_TETRAHEDRALIZED_VOLUME.cpp
PhysBAM_Geometry/Read_Write/Geometry/READ_WRITE_EMBEDDED_TRIANGULATED_OBJECT.cpp
PhysBAM_Geometry/Read_Write/Geometry/READ_WRITE_FREE_PARTICLES.cpp
PhysBAM_Geometry/Read_Write/Geometry/READ_WRITE_HEXAHEDRALIZED_VOLUME.cpp
PhysBAM_Geometry/Read_Write/Geometry/READ_WRITE_MESH_OBJECT.cpp
PhysBAM_Geometry/Read_Write/Geometry/READ_WRITE_POINT_SIMPLICES_1D.cpp
PhysBAM_Geometry/Read_Write/Geometry/READ_WRITE_RIGID_GEOMETRY_COLLECTION.cpp
PhysBAM_Geometry/Read_Write/Geometry/READ_WRITE_SEGMENTED_CURVE.cpp
PhysBAM_Geometry/Read_Write/Geometry/READ_WRITE_SEGMENTED_CURVE_2D.cpp
PhysBAM_Geometry/Read_Write/Geometry/READ_WRITE_STRUCTURE.cpp
PhysBAM_Geometry/Read_Write/Geometry/READ_WRITE_TETRAHEDRALIZED_VOLUME.cpp
PhysBAM_Geometry/Read_Write/Geometry/READ_WRITE_TRIANGULATED_AREA.cpp
PhysBAM_Geometry/Read_Write/Geometry/READ_WRITE_TRIANGULATED_SURFACE.cpp
PhysBAM_Geometry/Read_Write/Grids_Uniform_Level_Sets/READ_WRITE_LEVELSET_UNIFORM.cpp
PhysBAM_Geometry/Read_Write/Implicit_Objects/READ_WRITE_ANALYTIC_IMPLICIT_OBJECT.cpp
PhysBAM_Geometry/Read_Write/Implicit_Objects/READ_WRITE_IMPLICIT_OBJECT_TRANSFORMED.cpp
PhysBAM_Geometry/Read_Write/Implicit_Objects_Dyadic/READ_WRITE_DYADIC_IMPLICIT_OBJECT.cpp
PhysBAM_Geometry/Read_Write/Implicit_Objects_RLE/READ_WRITE_RLE_IMPLICIT_OBJECT.cpp
PhysBAM_Geometry/Read_Write/Implicit_Objects_Uniform/READ_WRITE_LEVELSET_IMPLICIT_OBJECT.cpp
PhysBAM_Geometry/Read_Write/Implicit_Objects_Uniform/READ_WRITE_MULTIBODY_LEVELSET_IMPLICIT_OBJECT.cpp
PhysBAM_Geometry/Read_Write/Topology/READ_WRITE_SIMPLEX_MESH.cpp
PhysBAM_Geometry/Red_Green/GREEN_CHILDREN_2D.cpp
PhysBAM_Geometry/Red_Green/GREEN_CHILDREN_3D.cpp
PhysBAM_Geometry/Red_Green/RED_CHILDREN_2D.cpp
PhysBAM_Geometry/Red_Green/RED_CHILDREN_3D.cpp
PhysBAM_Geometry/Red_Green/RED_GREEN_GRID_2D.cpp
PhysBAM_Geometry/Red_Green/RED_GREEN_GRID_3D.cpp
PhysBAM_Geometry/Red_Green/RED_TETRAHEDRON.cpp
PhysBAM_Geometry/Red_Green/RED_TRIANGLE.cpp
PhysBAM_Geometry/Red_Green/TETRAHEDRAL_GROUP.cpp
PhysBAM_Geometry/Registry/STRUCTURE_REGISTRY.cpp
PhysBAM_Geometry/Solids_Geometry/DEFORMABLE_GEOMETRY_COLLECTION.cpp
PhysBAM_Geometry/Solids_Geometry/RIGID_GEOMETRY.cpp
PhysBAM_Geometry/Solids_Geometry/RIGID_GEOMETRY_COLLECTION.cpp
PhysBAM_Geometry/Solids_Geometry/RIGID_GEOMETRY_EVOLUTION_PARAMETERS.cpp
PhysBAM_Geometry/Solids_Geometry_Evolution/KINEMATIC_EVOLUTION.cpp
PhysBAM_Geometry/Solids_Geometry_Evolution/RIGID_GEOMETRY_EXAMPLE_VELOCITIES.cpp
PhysBAM_Geometry/Spatial_Acceleration/BOX_HIERARCHY.cpp
PhysBAM_Geometry/Spatial_Acceleration/PARTICLE_HIERARCHY.cpp
PhysBAM_Geometry/Spatial_Acceleration/SEGMENT_HIERARCHY.cpp
PhysBAM_Geometry/Spatial_Acceleration/SPHERE_PARTITION.cpp
PhysBAM_Geometry/Spatial_Acceleration/TETRAHEDRON_HIERARCHY.cpp
PhysBAM_Geometry/Spatial_Acceleration/TRIANGLE_HIERARCHY.cpp
PhysBAM_Geometry/Spatial_Acceleration/TRIANGLE_HIERARCHY_2D.cpp
PhysBAM_Geometry/Tessellation/BOUNDED_HORIZONTAL_PLANE_TESSELLATION.cpp
PhysBAM_Geometry/Tessellation/CYLINDER_TESSELLATION.cpp
PhysBAM_Geometry/Tessellation/IMPLICIT_OBJECT_TESSELLATION.cpp
PhysBAM_Geometry/Tessellation/ORIENTED_BOX_TESSELLATION.cpp
PhysBAM_Geometry/Tessellation/PLANE_TESSELLATION.cpp
PhysBAM_Geometry/Tessellation/RANGE_TESSELLATION.cpp
PhysBAM_Geometry/Tessellation/RING_TESSELLATION.cpp
PhysBAM_Geometry/Tessellation/SPHERE_TESSELLATION.cpp
PhysBAM_Geometry/Tessellation/TORUS_TESSELLATION.cpp
PhysBAM_Geometry/Topology/HEXAHEDRON_MESH.cpp
PhysBAM_Geometry/Topology/POINT_SIMPLEX_MESH.cpp
PhysBAM_Geometry/Topology/POLYGON_MESH.cpp
PhysBAM_Geometry/Topology/SEGMENT_MESH.cpp
PhysBAM_Geometry/Topology/SIMPLEX_MESH.cpp
PhysBAM_Geometry/Topology/TETRAHEDRON_MESH.cpp
PhysBAM_Geometry/Topology/TRIANGLE_MESH.cpp
PhysBAM_Geometry/Topology_Based_Geometry/EMBEDDED_OBJECT.cpp
PhysBAM_Geometry/Topology_Based_Geometry/EMBEDDED_TETRAHEDRALIZED_VOLUME.cpp
PhysBAM_Geometry/Topology_Based_Geometry/EMBEDDED_TRIANGULATED_OBJECT.cpp
PhysBAM_Geometry/Topology_Based_Geometry/FREE_PARTICLES.cpp
PhysBAM_Geometry/Topology_Based_Geometry/HEXAHEDRALIZED_VOLUME.cpp
PhysBAM_Geometry/Topology_Based_Geometry/MESH_OBJECT.cpp
PhysBAM_Geometry/Topology_Based_Geometry/POINT_SIMPLICES_1D.cpp
PhysBAM_Geometry/Topology_Based_Geometry/SEGMENTED_CURVE.cpp
PhysBAM_Geometry/Topology_Based_Geometry/SEGMENTED_CURVE_2D.cpp
PhysBAM_Geometry/Topology_Based_Geometry/STRUCTURE.cpp
PhysBAM_Geometry/Topology_Based_Geometry/TETRAHEDRALIZED_VOLUME.cpp
PhysBAM_Geometry/Topology_Based_Geometry/TRIANGLE_SUBDIVISION.cpp
PhysBAM_Geometry/Topology_Based_Geometry/TRIANGULATED_AREA.cpp
PhysBAM_Geometry/Topology_Based_Geometry/TRIANGULATED_SURFACE.cpp
PhysBAM_Geometry/Topology_Based_Geometry_Intersections/RAY_POINT_SIMPLICES_1D_INTERSECTION.cpp
PhysBAM_Geometry/Topology_Based_Geometry_Intersections/RAY_SEGMENTED_CURVE_2D_INTERSECTION.cpp
PhysBAM_Geometry/Topology_Based_Geometry_Intersections/RAY_TRIANGULATED_SURFACE_INTERSECTION.cpp
PhysBAM_Geometry/Collisions_And_Interactions/ROBUST_SIMPLEX_INTERACTIONS.cpp)


target_compile_definitions(PhysBAM_Geometry PUBLIC "COMPILE_WITHOUT_RLE_SUPPORT=1")
target_compile_definitions(PhysBAM_Geometry PUBLIC "COMPILE_WITHOUT_ZLIB_SUPPORT=1")
target_compile_definitions(PhysBAM_Geometry PUBLIC "COMPILE_WITHOUT_DYADIC_SUPPORT=1")
#target_compile_definitions(PhysBAM_Geometry PUBLIC "COMPILE_WITHOUT_DOUBLE_SUPPORT=1")
target_compile_options(PhysBAM_Geometry PUBLIC "-fpermissive")
target_include_directories (PhysBAM_Geometry PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/)



#
#   Common_Tools
#

# No-Op -- Nothing here yet!

#
#   Common_Geometry
#

add_library(PhysBAM_Common_Geometry
Common_Geometry/Nonmanifold_Topology_Generation/REGION_GENERATOR.cpp
Common_Geometry/Nonmanifold_Topology_Generation/VOXELIZED_REGION_GENERATOR.cpp
Common_Geometry/Nonmanifold_Topology_Generation/GEOMETRY_PREDICATES.cpp
Common_Geometry/Nonmanifold_Topology_Generation/MATERIAL_PREDICATE_VOXELIZED_VOLUME.cpp
Common_Geometry/Nonmanifold_Topology_Generation/CUTTER_STRATEGY.cpp
Common_Geometry/Nonmanifold_Topology_Generation/CUTTER.cpp
Common_Geometry/Nonmanifold_Topology_Generation/CUTTER_BASIC_STRATEGY.cpp
Common_Geometry/Nonmanifold_Topology_Generation/MATERIAL_PREDICATE_TESSELATED_VOLUME.cpp
Common_Geometry/Nonmanifold_Topology_Generation/MATERIAL_PREDICATE_TESSELATED_SURFACE.cpp
Common_Geometry/Nonmanifold_Topology_Generation/CUTTER_NONMANIFOLD_LEVELSET_STRATEGY.cpp
)


target_compile_definitions(PhysBAM_Common_Geometry PUBLIC "COMPILE_WITHOUT_RLE_SUPPORT=1")
target_compile_definitions(PhysBAM_Common_Geometry PUBLIC "COMPILE_WITHOUT_ZLIB_SUPPORT=1")
target_compile_definitions(PhysBAM_Common_Geometry PUBLIC "COMPILE_WITHOUT_DYADIC_SUPPORT=1")
#target_compile_definitions(PhysBAM_Common_Geometry PUBLIC "COMPILE_WITHOUT_DOUBLE_SUPPORT=1")
target_compile_options(PhysBAM_Common_Geometry PUBLIC "-fpermissive")
target_include_directories (PhysBAM_Common_Geometry PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/)

#
#  Nonmanifold-topology
#

add_library(PhysBAM_Nonmanifold_Implicit_Objects
  Nonmanifold_Implicit_Objects/NONMANIFOLD_LEVELSET_3D.cpp
  Nonmanifold_Implicit_Objects/NONMANIFOLD_LEVELSET_ISOCONTOUR_2D.cpp
  Nonmanifold_Implicit_Objects/NONMANIFOLD_LEVELSET_ISOCONTOUR_3D.cpp
  Nonmanifold_Implicit_Objects/NONMANIFOLD_DUALCONTOUR_2D.cpp
  Nonmanifold_Implicit_Objects/NONMANIFOLD_FAST_MARCHING_METHOD_UNIFORM.cpp
  Nonmanifold_Implicit_Objects/NONMANIFOLD_LEVELSET_2D.cpp
  Nonmanifold_Implicit_Objects/NONMANIFOLD_DUALCONTOUR_3D.cpp
  Nonmanifold_Implicit_Objects/NONMANIFOLD_LEVELSET_UNIFORM.cpp
  Nonmanifold_Implicit_Objects/NONMANIFOLD_LEVELSET_MESH.cpp
)

target_compile_definitions(PhysBAM_Nonmanifold_Implicit_Objects PUBLIC "COMPILE_WITHOUT_RLE_SUPPORT=1")
target_compile_definitions(PhysBAM_Nonmanifold_Implicit_Objects PUBLIC "COMPILE_WITHOUT_ZLIB_SUPPORT=1")
target_compile_definitions(PhysBAM_Nonmanifold_Implicit_Objects PUBLIC "COMPILE_WITHOUT_DYADIC_SUPPORT=1")
#target_compile_definitions(PhysBAM_Nonmanifold_Implicit_Objects PUBLIC "COMPILE_WITHOUT_DOUBLE_SUPPORT=1")
target_compile_options(PhysBAM_Nonmanifold_Implicit_Objects PUBLIC "-fpermissive")
target_include_directories (PhysBAM_Nonmanifold_Implicit_Objects PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/)




